# acid_alloc

./: .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  test-all-configs.sh
.github/workflows/: ci.yaml
acid_alloc_hater/: Cargo.toml
acid_alloc_hater/src/: lib.rs
alloc_hater/: Cargo.toml
alloc_hater/src/: lib.rs
buddy/: Cargo.toml
buddy/src/: bitmap.rs  buddy.rs  lib.rs  polyfill.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: buddy_contiguous.rs  buddy_discontiguous.rs  bump.rs  slab.rs
src/: base.rs  bitmap.rs  buddy.rs  bump.rs  core.rs  lib.rs  polyfill.rs  slab.rs  tests.rs
