[package]
name = "acid_alloc"
description = "Bare-metal allocators"
authors = ["dataphract <dataphract@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

repository = "https://github.com/dataphract/acid_alloc"
documentation = "https://docs.rs/acid_alloc"
readme = "README.md"

# crates.io configuration
keywords = ["allocator", "no_std"]
categories = ["memory-management", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[workspace]
members = [
    "acid_alloc_hater",
    "alloc_hater",
]

[features]
default = ["sptr"]

alloc = []

# Enables nightly-only unstable Rust features.
unstable = []

[dependencies]
sptr = { version = "0.2.3", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
version-sync = "0.9.2"
